GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha20 :
    
        - dumpykota can now output XML.
        
    - 1.20alpha19 :
    
        - Improved user groups and user groups quotas dumps in dumpykota.
        
        - Finished implementation of LDAP support in dumpykota.
        
        - The md5 sum of the job's datas is now available as an 
          hexadecimal digest in the PYKOTAMD5SUM environment variable.
          
        - The description, filename, title, and options fields
          are now stored as UTF-8 strings in both LDAP and PostgreSQL.
          Proper charset is used during extraction from the database.
          
    - 1.20alpha18 :
    
        - Experimental autopykota command to initialize user
          account and quota entries on first print while not 
          resetting the balance value if not needed.
          
        - Added the new "winbind_separator" directive to strip
          out the Samba/Winbind domain name while printing if
          needed (Off by default).
          
    - 1.20alpha17 :
    
        - Added --hardreset command line option to edpykota.
        
        - Fixed problem with accented chars in title, filename
          or options and LDAP backend.
          
    - 1.20alpha16 :
    
        - Internal handling of socket based PJL queries over
          port tcp/9100 is now available with the magic
          'pjl' value in the hardware accounter.
          
    - 1.20alpha15 :
    
        - LDAP pykotaAccountBalance objects were always created
          attached to the pykotaUser objects. This is now
          fixed and the value of balancebase in pykota.conf
          is now correctly used.
          